syntax = "proto3";

package C2S;


enum C2S_MSG_ID
{
	NONE = 0;
	
	ID_C2S_HEARTBEAT_REQ = 1001;
	ID_C2S_HEARTBEAT_RES = 1002;

	// Login
	ID_C2L_LOGIN_REQ = 1101;
	ID_C2L_LOGIN_RES = 1102;
	
	// Zone
	ID_C2Z_LOGIN_ZONE_REQ = 2101;
	ID_C2Z_LOGIN_ZONE_RES = 2102;

	ID_Z2C_KICKOUT_PLAYER_REQ = 2103;
	
	ID_C2Z_CHANGE_NICKNAME_REQ = 2104;
	ID_C2Z_CHANGE_NICKNAME_RES = 2105;
}

enum C2S_ERROR_CODE
{
	// oommon
	SUCCESS = 0;
	GENERRAL_ERROR = 101;
	SERVER_INTERNAL_ERROR = 102;
	SERVER_NOT_READY = 103;
	INVALID_PARAMETER = 104;
	SERVER_BUSY = 105;
	
	// login
	LOGIN_IN_PROGRESS = 106;
	LOGIN_SESSION_HAS_EXPIRED = 107;
	LOGIN_LOAD_DATA_FAILED = 108;
}


message C2SHeartBeatReq
{
	int32 state = 1;
}

message C2SHeartBeatRes
{
	int32 state = 1;
}

